[gd_scene load_steps=4 format=3 uid="uid://dvattmg75tgjb"]

[ext_resource type="Script" path="res://Scripts/PromptDisplay.gd" id="1_aq6hw"]

[sub_resource type="LabelSettings" id="LabelSettings_rndrk"]
font_color = Color(0.658824, 0.658824, 0.658824, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ebm1j"]

[node name="PromptDisplay" type="Panel"]
custom_minimum_size = Vector2(350, 500)
mouse_default_cursor_shape = 2
script = ExtResource("1_aq6hw")

[node name="Prompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 10.0
offset_right = 29.5
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Prompt"

[node name="Day" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 10.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "DAY %d"
label_settings = SubResource("LabelSettings_rndrk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 52.0
offset_right = 332.0
offset_bottom = 247.0
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_ebm1j")

[node name="CW_Color" type="ColorRect" parent="."]
layout_mode = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 11.0
offset_right = 73.0
offset_bottom = 61.0
mouse_filter = 2
color = Color(0.988235, 1, 0.054902, 1)

[node name="CW_Lbl" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 12.0
offset_right = 79.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "%s Content Warning"

[node name="CW_EOD" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -172.0
offset_right = 337.0
offset_bottom = -10.0
grow_vertical = 0
mouse_filter = 2

[node name="MouseOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.431373, 1, 1, 0.0235294)

[node name="FocusOverlay" type="ReferenceRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.301961, 0.556863, 0.784314, 1)
border_width = 0.5
editor_only = false

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
